[package]
name = "spotuify-sync"
version.workspace = true
edition.workspace = true
publish = false
description = "Background sync engine for spotuify: playback, devices, playlists, recent items, library, and refetch gates."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-store = { workspace = true }
spotuify-spotify = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
