[package]
name = "spotuify-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Background sync engine for spotuify: playback, devices, playlists, recent items, library, and refetch gates."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }
spotuify-store = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
spotuify-provider-fake = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
