[package]
name = "spotuify-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Ratatui frontend for the daemon-backed spotuify client."

[dependencies]
spotuify-core = { workspace = true }
spotuify-protocol = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
ratatui-image = { workspace = true }
tui-big-text = "0.8"
image = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
